# iof0201-gulf-stream

./: .gitignore  02_exploration.ipynb  03_resources.ipynb  README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/parameters/: data_preparation.yml
data/08_reporting/equations/: equation_render.sh
docs/artigo/: artigo.aux  artigo.bbl  artigo.bib  artigo.blg  artigo.out  artigo.tex
docs/source/: conf.py  index.rst
notebooks/: 00_dataprep.py  01_dataprep.ipynb  01_dataprep_debug.ipynb  02_eda.ipynb
notebooks/old/: 00_dataprep.py  01_dataprep.ipynb
src/: requirements_poetry.txt  setup.py
src/gulf_stream/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/gulf_stream/pipelines/data_preparation/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_preparation/: test_pipeline.py
