[tool.kedro]
package_name = "gulf_stream"
project_name = "Gulf Stream"
project_version = "0.18.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/gulf_stream -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "iof0201-gulf-stream"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = "0.18.2"
netcdf4 = "^1.6.5"
xarray = "^2023.12.0"
cartopy = "^0.22.0"
fastparquet = "^2023.10.1"
geopandas = "^0.14.1"
ipykernel = "^6.27.1"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
isort = "^5.12.0"
kedro-viz = "^6.5.0"
kedro-static-viz = "^0.4.4"
wodpy = "^1.6.2"
tqdm = "^4.66.1"
joypy = "^0.2.6"
podaac-data-subscriber = "^1.14.0"
ppscore = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
